<resources>
    <string name="app_name">ADNApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Perfil</string>
    <string name="adn">ADN</string>
    <string name="splash_subtitle">Tu app de nutrición</string>
    <string name="siguiente">Siguiente</string>
    <string name="edad">Edad</string>
    <string name="introduce_tu_edad">Introduce tu edad</string>
    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="introduce_tu_altura">Introduce tu altura</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="introduce_tu_peso">Introduce tu peso</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="tienes_alergias">¿Tienes alergias?</string>
    <string name="selecciona_tus_alergias">Selecciona tus alergias</string>
    <string name="gluten">Gluten</string>
    <string name="lactosa">Lactosa</string>
    <string name="frutos_secos">Frutos secos</string>
    <string name="alimentos_favoritos">Alimentos favoritos</string>
    <string name="finalizar">Finalizar</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_de_usuario">Correo electrónico</string>
    <string name="ingrese_su_correo_de_usuario">Ingrese su correo de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="a_ade_los_alimentos_consumidos">Añade los alimentos consumidos</string>
    <string name="a_adir_alimento">Añadir alimento</string>
    <string name="dashboard">Dashboard</string>
    <string name="recuerda_que_las_macros_son_por_cada_100_gramos">¡Recuerda que las macros son <b>por cada 100g</b>!</string>
    <string name="tus_objetivos_diarios">Tus objetivos diarios</string>
    <string name="total_aim">{{total}}/{{aim}}</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="door">🚪</string>
    <string name="a_ade_los_productos_que_te_vas_a_comer">Añade los productos\ndesde el buscador</string>
    <string name="ingrese_sus_datos">Ingrese sus datos</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="ingrese_su_nombre_o_alias">Ingrese su nombre o alias</string>
    <string name="_0_resultados">0 resultados</string>
    <string name="emptystate">emptyState</string>
    <string name="prote_nas">Proteínas</string>
    <string name="calor_as">Calorías</string>
    <string name="carbohidratos">Carbohidratos</string>
    <string name="grasas">Grasas</string>
    <string name="az_car">Azúcar</string>
    <string name="nombre">Nombre</string>
    <string name="g_nero">Género</string>
    <string name="dieta_seleccionada">Dieta seleccionada</string>
    <string name="seleccione_la_dieta_a_seguir">Seleccione una dieta</string>
</resources>