<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ingrese_sus_datos"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/adn_black"/>

        <!-- Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/nombre_usuario"
            android:textSize="16sp"
            android:textColor="@color/adn_black"/>

        <EditText
            android:id="@+id/etName"
            android:autofillHints=""
            android:hint="@string/ingrese_su_nombre_o_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <!-- Edad -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/edad"
            android:textSize="16sp"
            android:textColor="@color/adn_black"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/introduce_tu_edad"
            android:inputType="number" />

        <!-- Sexo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/sexo"
            android:textSize="16sp"
            android:textColor="@color/adn_black"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mujer" />
        </RadioGroup>

        <!-- Altura -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/altura_cm"
            android:textSize="16sp"
            android:textColor="@color/adn_black"/>

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tu_altura"
            android:inputType="numberDecimal" />

        <!-- Peso -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/peso_kg"
            android:textSize="16sp"
            android:textColor="@color/adn_black"/>

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tu_peso"
            android:inputType="numberDecimal" />

        <!-- Botón siguiente -->
        <Button
            android:id="@+id/btnNextUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:enabled="true"
            android:text="@string/siguiente"
            android:backgroundTint="@color/adn_dark_green"
            android:textColor="@color/white"/>

    </LinearLayout>

</ScrollView>
