<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/correo_de_usuario"
            android:textColor="@color/adn_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif"
            android:hint="@string/ingrese_su_correo_de_usuario"
            android:inputType="text"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/contrase_a"
            android:textColor="@color/adn_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:fontFamily="sans-serif"
            android:hint="@string/ingrese_su_contrase_a"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#3E865D"
            android:fontFamily="sans-serif"
            android:padding="12dp"
            android:layout_marginTop="32dp"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
