<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FFE1"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_ade_los_alimentos_consumidos"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/adn_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Barra de búsqueda -->
    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_producto"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="#888888"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
         />

    <!-- Botón de buscar -->
    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search"
        android:paddingEnd="30dp"
        android:elevation="6dp"
        android:text=""
        android:drawableTint="@color/white"
        android:backgroundTint="@color/adn_dark_green"
        android:textColor="@android:color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/editTextSearch"
        app:layout_constraintBottom_toBottomOf="@id/editTextSearch"
        app:layout_constraintStart_toEndOf="@id/editTextSearch"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvResultCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0 resultados"
        android:visibility="invisible"
        android:textColor="@color/adn_dark_green"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/editTextSearch"/>

    <!-- Lista de resultados -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRecycledView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnAddFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultCount">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:listitem="@layout/item_food" />

        <View
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/fade_bottom"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Botón Añadir alimento -->
    <Button
        android:id="@+id/btnAddFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/adn_dark_green"
        android:text="@string/a_adir_alimento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clRecycledView" />

</androidx.constraintlayout.widget.ConstraintLayout>
